# m6

./: .gitignore  BENCHMARKS.md  Cargo.toml  PERFORMANCE.md  POSITIONING.md  README.md  bench.sh  check.sh  dev.sh  m6-auth-cli.md  m6-http.md  m6-implementation-plan.md  m6-md.md  m6-overview.md  m6-render-lib.md  m6-site-toml.md  m6-testing.md  m6-user-guide.md  tag.sh
.claude/projects/-Users-mgrosvenor-m6-spd/memory/: MEMORY.md
docs/: BENCHMARKS.md  PERFORMANCE.md  m6-ai-assist.md  m6-auth-cli.md  m6-auth-lib.md  m6-auth.md  m6-decisions.md  m6-design-discussion.md  m6-http.md  m6-render.md  m6-user-guide.md
m6-auth/: Cargo.toml
m6-auth-cli/: Cargo.toml
m6-auth-cli/src/: main.rs
m6-auth-cli/tests/: integration.rs
m6-auth-server/: Cargo.toml
m6-auth-server/src/: config.rs  handlers.rs  jwt.rs  key_watch.rs  main.rs  rate_limit.rs
m6-auth-server/tests/: integration.rs
m6-auth/src/: jwt.rs  lib.rs
m6-core/: Cargo.toml
m6-core/src/: config.rs  http.rs  lib.rs  log.rs  mime.rs  parse.rs  path.rs  server.rs  signal.rs  watcher.rs
m6-file/: Cargo.toml
m6-file/benches/: critical_path.rs
m6-file/src/: compress.rs  config.rs  handler.rs  http.rs  lib.rs  main.rs  route.rs
m6-file/tests/: integration.rs
m6-file/tests/fixtures/: m6-file-test.conf
m6-file/tests/fixtures/assets/css/: main.css  style.css
m6-file/tests/fixtures/assets/images/: photo.txt
m6-file/tests/fixtures/content/posts/hello/: index.html
m6-html/: Cargo.toml
m6-html/src/: main.rs
m6-html/tests/: integration.rs
m6-html/tests/fixtures/: site.toml
m6-html/tests/fixtures/configs/: m6-html.conf
m6-html/tests/fixtures/content/posts/: _index.json  hello-world.json
m6-html/tests/fixtures/data/: site.json
m6-html/tests/fixtures/templates/: error.html  home.html  post-index.html  post.html
m6-http/: Cargo.toml
m6-http/benches/: critical_path.rs
m6-http/src/: auth.rs  bench_coldstart.rs  bench_detail.rs  bench_main.rs  bench_url_backend_main.rs  cache.rs  config.rs  error.rs  forward.rs  h2c_client.rs  h2s_client.rs  hints.rs  http11.rs  http2.rs  lib.rs  main.rs  poller.rs  pool.rs  router.rs  stats.rs  watcher.rs
m6-http/tests/: edge_proxy.rs  integration.rs  integration_tests.rs
m6-http/tests/fixtures/: system.toml
m6-http/tests/fixtures/site/: site.toml
m6-md/: Cargo.toml
m6-md/src/: main.rs
m6-render/: Cargo.toml
m6-render/benches/: critical_path.rs
m6-render/src/: app.rs  compress.rs  config.rs  error.rs  lib.rs  minify.rs  multipart.rs  request.rs  response.rs  server.rs  template.rs  util.rs
