[package]
name    = "m6-auth-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "m6-auth-server"

[dependencies]
m6-auth      = { path = "../m6-auth" }
m6-core      = { path = "../m6-core" }
jsonwebtoken = "9"
toml         = "0.8"
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
anyhow       = "1"
tracing      = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
sha2         = { version = "0.10", features = [] }
hex          = "0.4"
nix          = { version = "0.27", features = ["signal"] }
libc         = "0.2"

[dev-dependencies]
tempfile        = "3"
jsonwebtoken    = "9"
serde_json      = "1"
m6-auth         = { path = "../m6-auth" }
