[package]
name    = "m6-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "m6_core"

[dependencies]
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
toml       = "0.8"
anyhow     = "1"
thiserror  = "1"
tracing    = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
nix        = { version = "0.27", features = ["signal"] }
libc       = "0.2"

[dev-dependencies]
tempfile = "3"
