[package]
name    = "m6-file"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "m6-file"

[lib]
name = "m6_file_lib"
path = "src/lib.rs"

[dependencies]
m6-core     = { path = "../m6-core" }
toml        = "0.8"
serde       = { version = "1", features = ["derive"] }
anyhow      = "1"
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
nix         = { version = "0.27", features = ["signal", "poll"] }
mime_guess  = "2"
brotli      = "3"
flate2      = "1"

[dev-dependencies]
tempfile  = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name    = "critical_path"
harness = false
