[package]
name    = "m6-http"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "m6-http"
path = "src/main.rs"

[lib]
name = "m6_http_lib"
path = "src/lib.rs"

[dependencies]
quiche         = { version = "0.22", features = ["boringssl-vendored"] }
matchit        = "0.8"
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"
toml           = "0.8"
anyhow         = "1"
thiserror      = "1"
m6-core        = { path = "../m6-core" }
tracing        = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
jsonwebtoken   = "9"
glob           = "0.3"
bytes          = "1"
base64         = "0.22"
sha2           = "0.10"
httparse       = "1"
ahash          = "0.8"
libc           = "0.2"
nix            = { version = "0.27", features = ["signal"] }
rustls         = { version = "0.23", default-features = false, features = ["ring", "std"] }
rustls-native-certs = "0.8"
webpki-roots   = "0.26"

[target.'cfg(target_os = "linux")'.dependencies]
inotify = "0.10"

[dev-dependencies]
tempfile  = "3"
anyhow    = "1"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name    = "critical_path"
harness = false
