[package]
name    = "m6-http"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "m6-http"
path = "src/main.rs"

[[bin]]
name = "m6-bench"
path = "src/bench_main.rs"

[[bin]]
name = "m6-bench-detail"
path = "src/bench_detail.rs"

[[bin]]
name = "m6-bench-coldstart"
path = "src/bench_coldstart.rs"

[[bin]]
name = "bench-url-backend"
path = "src/bench_url_backend_main.rs"

[lib]
name = "m6_http_lib"
path = "src/lib.rs"

[dependencies]
quiche         = { git = "https://github.com/cloudflare/quiche", tag = "0.26.1", features = ["boringssl-vendored"] }
matchit        = "0.8"
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"
toml           = "0.8"
anyhow         = "1"
thiserror      = "1"
m6-core        = { path = "../m6-core" }
tracing        = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
jsonwebtoken   = "9"
glob           = "0.3"
bytes          = "1"
base64         = "0.22"
sha2           = "0.10"
httparse       = "1"
hpack          = "0.3"
ahash          = "0.8"
libc           = "0.2"
nix            = { version = "0.27", features = ["signal"] }
rustls         = { version = "0.23", default-features = false, features = ["ring", "std"] }
rustls-pemfile = "2"
rustls-native-certs = "0.8"
webpki-roots   = "0.26"
rand           = "0.8"
h2             = "0.4"
tokio          = { version = "1", features = ["rt", "net", "io-util", "macros"] }
tokio-rustls   = "0.26"
http           = "1"

[target.'cfg(target_os = "linux")'.dependencies]
inotify = "0.10"

[dev-dependencies]
tempfile      = "3"
anyhow        = "1"
criterion     = { version = "0.5", features = ["html_reports"] }
rcgen         = "0.13"

[[bench]]
name    = "critical_path"
harness = false
